# vkml

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
cmake/: llvm-project.cmake  llvm.cmake  mlir.cmake
compiler/: CMakeLists.txt
compiler/include/: compiler.h
compiler/src/: compiler.cpp
compiler/tablegen/Conversion/: pass.td
compiler/tablegen/Dialect/: vkmlBase.td  vkmlOps.td
compiler/tablegen/Dialect/vkml/: vkml.td  vkmlBase.td  vkmlOps.td  vkmlTypes.td
compiler/tablegen/Dialect/vkrt/: vkrt.td
compiler/vkml-opt/: CMakeLists.txt  main.cpp  vkml-opt.cpp
compiler/vkml-translate/: CMakeLists.txt  vkml-translate.cpp
dev/: main.cpp
inc/: layers.h  tensor.h  type.h  vkml.h
inc/layers/: binary.h  bitwise.h  data.h  logical.h  reduction.h  relational.h  unary.h
include/: CMakeLists.txt  layers.h  tensor.h  vkml.h
include/layers/: binary.h  unary.h
include/layers/arith/: add.h
lib/: vkml.cpp  vkml_compiler.cpp
lib/vkrt/: CMakeLists.txt  vkrt.cpp
lib/vkrt/include/: rt.h
src/: CMakeLists.txt  vkml.cpp  vkml.h
test/: CMakeLists.txt
tools/: CMakeLists.txt  vkml-opt.cpp
